--- a/src/app/header/header.template.html
+++ b/src/app/header/header.template.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/header/style.css"/>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<link rel="stylesheet" href="app/header/style.css"/>
+<nav id="navigation" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
     <a ng-href="{{$ctrl.welcomeLink}}" class="navbar-brand">
         {{$ctrl.welcomeMessage}}
