--- a/src/app/advertisement/advertisement.template.html
+++ b/src/app/advertisement/advertisement.template.html
@@ -1,5 +1,6 @@
-<link rel="stylesheet" href="app/advertisement/style.css"/>
-<div class="card h-100">
+<link rel="stylesheet" href="app/advertisement/style.css">
+<div  class="col-10 col-sm-10 col-md-6 col-lg-4 col-xl-4 mb-4">
+    <div class="card h-100">
         <img class="card-img-top" ng-src={{$ctrl.advertisement.image}} />
         <div class="card-body">
             <h4 class="card-title">
@@ -14,3 +15,4 @@
             </small>
         </div>
     </div>
+</div>
